--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 -f https://download.pytorch.org/whl/torch_stable.html
 torch==1.8.1+cpu 
 gunicorn==20.0.4
-Werkzeug==0.16.0
+Werkzeug>=2.2.2
 requests==2.24.0
 Flask==2.2.3
 Pillow==9.5.0
