--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 -f https://download.pytorch.org/whl/torch_stable.html
-torch==2.0.0+cpu 
+torch==2.0.0
 gunicorn==20.0.4
 Werkzeug>=2.2.2
 requests==2.24.0
