--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 torch==2.0.0+cpu
 gunicorn==20.0.4
 Werkzeug>=2.2.2
-requests==2.24.0
+requests
 Flask==2.2.3
 Pillow==9.5.0
 torchvision==0.15.1+cpu
